hugr-llvm/src/extension/snapshots/hugr_llvm__extension__int__test__emission@llvm14_ineg_[2].snap
---
source: hugr-llvm/src/extension/int.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define internal i8 @_hl.main.1(i8 %0) {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %1 = sub i8 0, %0
  ret i8 %1
}
