hugr-llvm/src/extension/snapshots/hugr_llvm__extension__int__test__emission@llvm21_idiv_checked_s_[3].snap
---
source: hugr-llvm/src/extension/int.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

@0 = private unnamed_addr constant [24 x i8] c"Attempted division by 0\00", align 1

define internal { i1, { i32, ptr }, i8 } @_hl.main.1(i8 %0, i8 %1) !dbg !3 {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %valid_div = icmp ne i8 %1, 0, !dbg !15
  %is_divisor_large = icmp ugt i8 %1, 127, !dbg !15
  %2 = zext i1 %is_divisor_large to i8, !dbg !15
  %is_dividend_negative = icmp slt i8 %0, 0, !dbg !15
  %3 = zext i1 %is_dividend_negative to i8, !dbg !15
  %4 = shl i8 %2, 1, !dbg !15
  %tag = or i8 %4, %3, !dbg !15
  %quotient = sdiv i8 %0, %1, !dbg !15
  %remainder = srem i8 %0, %1, !dbg !15
  %result = alloca { i8, i8 }, align 8, !dbg !15
  switch i8 %tag, label %non_negative_smoldiv [
    i8 1, label %negative_smoldiv
    i8 2, label %non_negative_bigdiv
    i8 3, label %negative_bigdiv
  ], !dbg !15

negative_bigdiv:                                  ; preds = %entry_block
  %5 = add i8 %0, %1, !dbg !15
  %6 = insertvalue { i8, i8 } { i8 -1, i8 poison }, i8 %5, 1, !dbg !15
  store { i8, i8 } %6, ptr %result, align 1, !dbg !15
  br label %finish, !dbg !15

negative_smoldiv:                                 ; preds = %entry_block
  %7 = insertvalue { i8, i8 } poison, i8 %quotient, 0, !dbg !15
  %8 = insertvalue { i8, i8 } %7, i8 0, 1, !dbg !15
  %9 = sub i8 %quotient, 1, !dbg !15
  %10 = add i8 %1, %remainder, !dbg !15
  %11 = insertvalue { i8, i8 } poison, i8 %9, 0, !dbg !15
  %12 = insertvalue { i8, i8 } %11, i8 %10, 1, !dbg !15
  %is_rem_0 = icmp eq i8 %remainder, 0, !dbg !15
  %13 = select i1 %is_rem_0, { i8, i8 } %8, { i8, i8 } %12, !dbg !15
  store { i8, i8 } %13, ptr %result, align 1, !dbg !15
  br label %finish, !dbg !15

non_negative_bigdiv:                              ; preds = %entry_block
  %14 = insertvalue { i8, i8 } { i8 0, i8 poison }, i8 %0, 1, !dbg !15
  store { i8, i8 } %14, ptr %result, align 1, !dbg !15
  br label %finish, !dbg !15

non_negative_smoldiv:                             ; preds = %entry_block
  %15 = insertvalue { i8, i8 } poison, i8 %quotient, 0, !dbg !15
  %16 = insertvalue { i8, i8 } %15, i8 %remainder, 1, !dbg !15
  store { i8, i8 } %16, ptr %result, align 1, !dbg !15
  br label %finish, !dbg !15

finish:                                           ; preds = %negative_bigdiv, %non_negative_bigdiv, %negative_smoldiv, %non_negative_smoldiv
  %result3 = load { i8, i8 }, ptr %result, align 1, !dbg !15
  %17 = insertvalue { i1, { i8, i8 }, { i32, ptr } } { i1 true, { i8, i8 } poison, { i32, ptr } poison }, { i8, i8 } %result3, 1, !dbg !15
  %18 = select i1 %valid_div, { i1, { i8, i8 }, { i32, ptr } } %17, { i1, { i8, i8 }, { i32, ptr } } { i1 false, { i8, i8 } poison, { i32, ptr } { i32 2, ptr @0 } }, !dbg !15
  %19 = extractvalue { i1, { i8, i8 }, { i32, ptr } } %18, 1, !dbg !15
  %20 = extractvalue { i8, i8 } %19, 0, !dbg !15
  %21 = extractvalue { i8, i8 } %19, 1, !dbg !15
  %22 = extractvalue { i1, { i8, i8 }, { i32, ptr } } %18, 2, !dbg !15
  %tag4 = extractvalue { i1, { i8, i8 }, { i32, ptr } } %18, 0, !dbg !15
  %data_variant = insertvalue { i1, { i32, ptr }, i8 } { i1 true, { i32, ptr } poison, i8 poison }, i8 %20, 2, !dbg !15
  %err_variant = insertvalue { i1, { i32, ptr }, i8 } { i1 false, { i32, ptr } poison, i8 poison }, { i32, ptr } %22, 1, !dbg !15
  %23 = select i1 %tag4, { i1, { i32, ptr }, i8 } %data_variant, { i1, { i32, ptr }, i8 } %err_variant, !dbg !15
  ret { i1, { i32, ptr }, i8 } %23
}

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_Python, file: !2, producer: "hugr_llvm_test", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug)
!2 = !DIFile(filename: "/cmJrSnVYeXFf/zCkHdtWCCnkJhPKiWSKICgZuRNRvR/mbrfVq.gpy.py", directory: "/lPNzlV/ClAphFG/yrhvZs/eDgUn/eIVwAutKJHaZEPSZwPXPeycUvnujGxZ")
!3 = distinct !DISubprogram(name: "_hl.main.1", linkageName: "_hl.main.1", scope: null, file: !4, line: 25254, type: !5, scopeLine: 25255, spFlags: DISPFlagLocalToUnit | DISPFlagDefinition, unit: !1)
!4 = !DIFile(filename: "/cmJrSnVYeXFf/zCkHdtWCCnkJhPKiWSKICgZuRNRvR/mbrfVq.gpy.py", directory: "")
!5 = !DISubroutineType(types: !6)
!6 = !{!7, !14, !14}
!7 = !DICompositeType(tag: DW_TAG_structure_type, name: "{ i1, { i32, ptr }, i8 }", file: !2, size: 104, align: 8, elements: !8)
!8 = !{!9, !10, !14}
!9 = !DIBasicType(name: "i1", size: 1, encoding: DW_ATE_unsigned)
!10 = !DICompositeType(tag: DW_TAG_structure_type, name: "{ i32, ptr }", file: !2, size: 96, align: 8, elements: !11)
!11 = !{!12, !13}
!12 = !DIBasicType(name: "i32", size: 32, encoding: DW_ATE_unsigned)
!13 = !DIBasicType(name: "ptr", size: 64, encoding: DW_ATE_address)
!14 = !DIBasicType(name: "i8", size: 8, encoding: DW_ATE_unsigned)
!15 = !DILocation(line: 27062, column: 402, scope: !3)
